--- a/app/src/main/res/layout/activity_signup_password.xml
+++ b/app/src/main/res/layout/activity_signup_password.xml
@@ -5,46 +5,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mytracker.gpstracker.familytracker.RegisterPasswordActivity">
-
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbarPassword"
-        android:minHeight="?attr/actionBarSize"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:titleTextColor="@android:color/white"
-        android:background="?attr/colorPrimary">
-    </android.support.v7.widget.Toolbar>
+    android:layout_margin="16dp"
+    tools:context=".RegisterPasswordActivity">
 
     <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="wrap_content"
+        android:id="@+id/signup_password_edittext"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:hint="Create a password"
-        android:gravity="center"
-        android:padding="17dp"
-        android:textSize="18sp"
-        android:layout_below="@+id/toolbarPassword"
-        android:layout_marginTop="151dp"
+        android:layout_centerVertical="true"
         android:ems="10"
+        android:gravity="center"
+        android:hint="Create a password"
         android:inputType="textPassword"
-        android:layout_alignParentEnd="true" />
+        android:padding="17dp"
+        android:textSize="18sp" />
 
     <Button
-        android:id="@+id/buttonPassword"
-        android:layout_width="wrap_content"
+        android:id="@+id/signup_password_next_signup"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="Next"
-        android:background="@drawable/button_shape"
-        android:textAllCaps="false"
-        android:textSize="18sp"
-        android:onClick="goToNameActivity"
-        android:textColor="#FFFFFF"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:background="@drawable/button_shape"
+        android:onClick="go_to_name_activity"
+        android:text="Sign Up Next"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/textView"
@@ -53,9 +42,7 @@
         android:text="Must be 6 characters or more"
         android:textSize="15sp"
         android:layout_marginTop="6dp"
-        android:layout_below="@+id/editTextPassword"
+        android:layout_below="@+id/signup_password_edittext"
         android:layout_centerHorizontal="true" />
-
-
 
 </RelativeLayout>
