--- a/app/src/main/res/layout/activity_signup_profile.xml
+++ b/app/src/main/res/layout/activity_signup_profile.xml
@@ -5,63 +5,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mytracker.gpstracker.familytracker.RegisterNameActivity">
+    android:layout_margin="16dp"
+    tools:context=".RegisterNameActivity">
 
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:minHeight="?attr/actionBarSize"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:titleTextColor="@android:color/white"
-        android:background="?attr/colorPrimary">
-    </android.support.v7.widget.Toolbar>
-
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:src="@drawable/defaultprofile"
-        app:civ_border_width="2dp"
-
         app:civ_border_color="#FF000000"
-        android:layout_below="@+id/toolbar"
-        android:layout_alignEnd="@+id/textView"
-        android:layout_marginEnd="76dp"
-        android:layout_marginTop="25dp" />
+        app:civ_border_width="2dp" />
 
     <EditText
-        android:id="@+id/signup_email_edittext"
-        android:layout_width="wrap_content"
+        android:id="@+id/signup_profile_edittext"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter your name"
-        android:gravity="center"
-        android:padding="17dp"
-        android:textSize="18sp"
-        android:layout_marginTop="27dp"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:layout_below="@+id/textView2"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
-
+        android:layout_centerVertical="true"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="Enter your name"
+        android:inputType="textEmailAddress"
+        android:padding="17dp"
+        android:textSize="18sp" />
 
     <Button
-        android:id="@+id/signup_email_next_button"
+        android:id="@+id/signup_profile_next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="Next"
-        android:onClick="generateCode"
-        android:background="@drawable/button_shape"
-        android:textAllCaps="false"
-        android:textSize="18sp"
-        android:textColor="#FFFFFF"
-
         android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:background="@drawable/button_shape"
+        android:onClick="generate_code_profile"
+        android:text="Sign Up Next"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/textView"
@@ -70,21 +52,16 @@
         android:text="This is how you'll appear on your map"
         android:textSize="16sp"
         android:layout_marginTop="7dp"
-        android:layout_below="@+id/signup_email_edittext"
+        android:layout_below="@+id/signup_profile_edittext"
         android:layout_centerHorizontal="true" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:onClick="openGallery"
+        android:id="@+id/add_photo_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/profile_image"
-        android:layout_below="@+id/profile_image"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="8dp"
+        android:layout_above="@+id/signup_profile_edittext"
+        android:layout_centerHorizontal="true"
+        android:onClick="open_gallery"
         android:text="Add photo" />
-
-
-
 
 </RelativeLayout>
