--- a/app/src/main/res/layout/alert_layout.xml
+++ b/app/src/main/res/layout/alert_layout.xml
@@ -5,72 +5,52 @@
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
-    android:layout_margin="6dp"
-    card_view:cardElevation="3dp"
-
-    card_view:cardCornerRadius="12dp"
-    card_view:contentPadding="4dp"
+    android:layout_margin="3dp"
+    card_view:cardElevation="5dp"
+    card_view:contentPadding="1dp"
     android:foreground="?selectableItemBackground">
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/parentLinear"
         android:padding="14dp">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="10"
             android:orientation="horizontal">
-
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="0dp"
                 android:id="@+id/alertImage"
                 android:layout_height="50dp"
-                android:layout_weight="2"
-                android:src="@drawable/defaultprofile"
-                />
-
+                android:layout_weight="1.4"
+                android:src="@drawable/defaultprofile" />
             <TextView
                 android:id="@+id/alertName"
                 android:layout_width="0dp"
-                android:layout_weight="7"
+                android:layout_weight="8"
                 android:layout_height="wrap_content"
-                android:text="Dubai"
+                android:text="Username"
                 android:textStyle="bold"
+                android:layout_gravity="center_vertical"
                 android:padding="5dp"
-                android:textSize="22sp" />
-
-
-
-
+                android:textSize="19sp" />
         </LinearLayout>
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-
             <TextView
                 android:id="@+id/alertDate"
-                android:layout_width="0dp"
+                android:layout_width="5dp"
                 android:layout_weight="7"
                 android:layout_height="wrap_content"
                 android:text="Date:"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:padding="5dp"
-                android:textSize="20sp" />
-
+                android:textSize="15sp" />
         </LinearLayout>
-
     </LinearLayout>
-
-
-
 </android.support.v7.widget.CardView>
