--- a/app/src/main/res/layout/joined_card_layout.xml
+++ b/app/src/main/res/layout/joined_card_layout.xml
@@ -5,10 +5,9 @@
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
-    android:layout_margin="6dp"
+    android:layout_margin="3dp"
     card_view:cardElevation="3dp"
-    card_view:cardCornerRadius="12dp"
-    card_view:contentPadding="4dp"
+    card_view:contentPadding="1dp"
     android:foreground="?selectableItemBackground">
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,21 +20,18 @@
             android:layout_weight="1"
             android:layout_height="60dp"
             android:id="@+id/itemImage"
-            android:src="@drawable/defaultprofile"
-
-            />
+            android:src="@drawable/defaultprofile" />
 
         <TextView
             android:id="@+id/item_title"
             android:layout_width="0dp"
             android:layout_weight="3"
             android:layout_height="wrap_content"
-            android:text="Dubai"
+            android:text="Username"
+            android:layout_gravity="center_vertical"
             android:padding="10dp"
             android:textStyle="bold"
             android:textSize="22sp" />
-
-
 
     </LinearLayout>
 
