card layouts commit

--- a/app/src/main/res/layout/activity_signup_profile.xml
+++ b/app/src/main/res/layout/activity_signup_profile.xml
@@ -11,7 +11,7 @@
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="100dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/defaultprofile"
@@ -59,8 +59,9 @@
         android:id="@+id/add_photo_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/signup_profile_edittext"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="116dp"
         android:onClick="open_gallery"
         android:text="Add photo" />
 
