--- a/app/src/main/res/layout/activity_followers.xml
+++ b/app/src/main/res/layout/activity_followers.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@android:color/background_light"
     tools:context=".MyCircleActivity">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -13,10 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:titleTextColor="@android:color/white"
-
         android:background="?attr/colorPrimary">
     </android.support.v7.widget.Toolbar>
-
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewFollowers"
@@ -26,12 +24,12 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/toolbar" />
 
-
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:onClick="refresh"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="22dp"
         android:layout_marginRight="22dp"
         app:srcCompat="@drawable/refresh"
@@ -39,6 +37,5 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_above="@+id/recyclerview" />
-
 
 </RelativeLayout>
