--- a/app/src/main/res/layout/activity_following.xml
+++ b/app/src/main/res/layout/activity_following.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@android:color/background_light"
     tools:context=".JoinedCirclesActivity">
 
     <android.support.v7.widget.Toolbar
@@ -23,6 +23,5 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/toolbar" />
-
 
 </RelativeLayout>
