--- a/app/src/main/res/layout/activity_live_location.xml
+++ b/app/src/main/res/layout/activity_live_location.xml
@@ -16,7 +16,6 @@
         android:background="?attr/colorPrimary">
     </android.support.v7.widget.Toolbar>
 
-
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -25,17 +24,18 @@
         android:layout_below="@+id/toolbar" />
 
     <Button
-        android:id="@+id/geofence_button"
+        android:id="@+id/signup_nav_click"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
+        android:layout_margin="16dp"
         android:onClick="start_geofence"
-        android:background="@android:color/holo_red_light"
+        android:background="@android:color/transparent"
         android:text="Start Geofence"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"
+        android:textColor="@android:color/darker_gray"
         android:textSize="16sp" />
 
 </RelativeLayout>
