--- a/app/src/main/res/layout/activity_signin_email.xml
+++ b/app/src/main/res/layout/activity_signin_email.xml
@@ -23,7 +23,7 @@
         android:textSize="18sp" />
 
     <Button
-        android:id="@+id/signup_profile_next_button"
+        android:id="@+id/signin_nav_click"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -35,7 +35,5 @@
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="18sp" />
-
-
 
 </RelativeLayout>
