--- a/app/src/main/res/layout/activity_signup_profile.xml
+++ b/app/src/main/res/layout/activity_signup_profile.xml
@@ -32,7 +32,7 @@
         android:textSize="18sp" />
 
     <Button
-        android:id="@+id/signup_profile_next_button"
+        android:id="@+id/signin_nav_click"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
