--- a/app/src/main/res/layout/followers_card_layout.xml
+++ b/app/src/main/res/layout/followers_card_layout.xml
@@ -46,7 +46,7 @@
                 android:layout_weight="1"
                 android:id="@+id/item_image"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/location_off" />
+                android:src="@drawable/ic_location_off" />
 
         </LinearLayout>
 
