--- a/app/src/main/res/layout/activity_signin_email.xml
+++ b/app/src/main/res/layout/activity_signin_email.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--suppress ALL -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,6 +7,31 @@
     android:layout_margin="16dp"
     tools:context=".activities.signin_activities.SigninEmailActivity">
 
+    <ImageView
+        android:id="@+id/back_image_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="16dp"
+        android:onClick="back_image_button"
+        app:srcCompat="@drawable/ic_navigate_back" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_alignParentTop="false"
+        android:layout_toEndOf="@+id/back_image_button"
+        android:layout_toRightOf="@+id/back_image_button"
+        android:gravity="center_vertical"
+        android:text="Sign In"
+        android:textStyle="italic" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_below="@+id/back_image_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-16dp"
+        android:src="@drawable/icon_sign_in" />
 
     <EditText
         android:id="@+id/signup_profile_edittext"
@@ -20,7 +44,8 @@
         android:hint="Enter your email address"
         android:inputType="textEmailAddress"
         android:padding="17dp"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_alignParentLeft="true" />
 
     <Button
         android:id="@+id/signin_nav_click"
@@ -34,6 +59,8 @@
         android:text="Sign In Next"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true" />
 
 </RelativeLayout>
