--- a/app/src/main/res/layout/activity_signup_password.xml
+++ b/app/src/main/res/layout/activity_signup_password.xml
@@ -8,6 +8,32 @@
     android:layout_margin="16dp"
     tools:context=".RegisterPasswordActivity">
 
+    <ImageView
+        android:id="@+id/back_image_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="16dp"
+        android:onClick="back_image_button"
+        app:srcCompat="@drawable/ic_navigate_back" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_alignParentTop="false"
+        android:layout_toEndOf="@+id/back_image_button"
+        android:layout_toRightOf="@+id/back_image_button"
+        android:gravity="center_vertical"
+        android:text="Sign Up"
+        android:textStyle="italic" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_below="@+id/back_image_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-16dp"
+        android:src="@drawable/icon_password" />
+
     <EditText
         android:id="@+id/signup_password_edittext"
         android:layout_width="match_parent"
