--- a/app/src/main/res/layout/content_current_location.xml
+++ b/app/src/main/res/layout/content_current_location.xml
@@ -32,4 +32,15 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/appBarLayout" />
 
+
+    <!--<Switch-->
+        <!--android:id="@+id/location_share_switch"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_marginTop="16dp"-->
+        <!--android:padding="10dp"-->
+        <!--android:text="Location Share" />-->
+
 </RelativeLayout>
