--- a/app/src/main/res/layout/content_current_location.xml
+++ b/app/src/main/res/layout/content_current_location.xml
@@ -9,38 +9,38 @@
     tools:context="com.mytracker.gpstracker.familytracker.MyNavigationTutorial"
     tools:showIn="@layout/app_bar_current_location">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        android:id="@+id/appBarLayout">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
-
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/current_location_click"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/appBarLayout" />
+        android:onClick="fetch_location"
+        android:background="@android:color/background_light"
+        android:text="Show Location"
+        android:textAllCaps="false"
+        android:textColor="@android:color/background_dark"
+        android:textSize="16sp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true" />
 
-
-    <!--<Switch-->
-        <!--android:id="@+id/location_share_switch"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_marginTop="16dp"-->
-        <!--android:padding="10dp"-->
-        <!--android:text="Location Share" />-->
+    <Switch
+        android:id="@+id/location_share_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/current_location_click"
+        android:layout_alignParentEnd="true"
+        android:padding="10dp"
+        android:onClick="share_location_switch"
+        android:text="Location Share"
+        android:textColor="@android:color/background_dark" />
 
 </RelativeLayout>
