--- a/app/src/main/res/layout/activity_send_help_alerts.xml
+++ b/app/src/main/res/layout/activity_send_help_alerts.xml
@@ -64,7 +64,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:background="@drawable/mynewbutton"
+        android:background="@drawable/button_shape"
         android:onClick="setCancel"
         android:text="Cancel"
         android:textColor="#FFFFFF"
