--- a/app/src/main/res/layout/activity_live_location.xml
+++ b/app/src/main/res/layout/activity_live_location.xml
@@ -54,10 +54,10 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:onClick="start_geofence"
-        android:background="@android:color/background_light"
+        android:background="@drawable/button_shape"
         android:text="Start Geofence"
         android:textAllCaps="false"
-        android:textColor="@android:color/tertiary_text_dark"
+        android:textColor="@android:color/background_light"
         android:textSize="16sp" />
 
 </RelativeLayout>
