--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#b0bec5</color>
-    <color name="colorPrimaryDark">#808e95</color>
-    <color name="colorAccent">#e2f1f8</color>
+    <color name="colorPrimary">#f05545</color>
+    <color name="colorPrimaryDark">#b71c1c</color>
+    <color name="colorAccent">#7f0000</color>
 </resources>
