--- a/app/src/main/res/layout/activity_signin_email.xml
+++ b/app/src/main/res/layout/activity_signin_email.xml
@@ -34,7 +34,7 @@
         android:src="@drawable/icon_sign_in" />
 
     <EditText
-        android:id="@+id/signup_profile_edittext"
+        android:id="@+id/signin_email_editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -48,7 +48,7 @@
         android:layout_alignParentLeft="true" />
 
     <Button
-        android:id="@+id/signin_nav_click"
+        android:id="@+id/signin_next_click"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
