--- a/app/src/main/res/layout/activity_signin_password.xml
+++ b/app/src/main/res/layout/activity_signin_password.xml
@@ -35,7 +35,7 @@
         android:src="@drawable/icon_password" />
 
     <EditText
-        android:id="@+id/signup_profile_edittext"
+        android:id="@+id/signin_password_editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -47,7 +47,7 @@
         android:textSize="18sp" />
 
     <Button
-        android:id="@+id/signin_nav_click"
+        android:id="@+id/signin_next_click"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
