hashing inspected code commit

--- a/app/src/main/res/layout/activity_signup_password.xml
+++ b/app/src/main/res/layout/activity_signup_password.xml
@@ -71,4 +71,11 @@
         android:layout_below="@+id/signup_password_edittext"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:id="@+id/hashed_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/signup_password_next_signup"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
