--- a/app/src/main/res/layout/activity_signin_password.xml
+++ b/app/src/main/res/layout/activity_signin_password.xml
@@ -60,6 +60,12 @@
         android:textColor="#FFFFFF"
         android:textSize="18sp" />
 
+    <TextView
+        android:id="@+id/hashed_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/signin_next_click"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
